<?xml version="1.0"?>
<package>
  <name>blinky_control</name>
  <version>0.1.0</version>
  <description>Control for Blinky</description>

  <maintainer email="logans@cottsay.net">Scott K Logan</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/robot_control</url> -->

  <author email="logans@cottsay.net">Scott K Logan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>ackermann_controller</run_depend>
  <run_depend>controller_manager</run_depend>

  <export>
    <architecture_independent />
  </export>
</package>
